[package]
name = "cabal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allpairs-loader = { path = "../allpairs-loader" }
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
petgraph = "0.6.4"
ppm-table = { path = "../ppm-table" }
regex = "1.10.3"
