[package]
name = "cabal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
allpairs = { path = "../allpairs" }
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
petgraph = "0.6.4"
ppm-table = { path = "../ppm-table" }
regex = "1.10.3"
