[package]
name = "ppm-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.3"
serde = { version = "1.0.183", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "bimap/serde"]
